-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 7u111, 8u102, 9
-
Component/s: hotspot
-
sparc, sparc_64
-
solaris
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8168474 | 9-repo-mobile | Martin Walsh | P2 | Resolved | Fixed | team |
| JDK-8197270 | 8u192 | Kevin Walls | P2 | Resolved | Fixed | b01 |
| JDK-8195275 | 8u172 | Kevin Walls | P2 | Resolved | Fixed | b03 |
| JDK-8190040 | 8u162 | Kevin Walls | P2 | Resolved | Fixed | b04 |
| JDK-8183434 | 8u161 | Kevin Walls | P2 | Resolved | Fixed | b01 |
| JDK-8168475 | 8u152 | Kevin Walls | P2 | Closed | Fixed | b03 |
| JDK-8185196 | 8u144 | Kevin Walls | P2 | Resolved | Fixed | b31 |
| JDK-8183063 | 8u141 | Kevin Walls | P2 | Resolved | Fixed | b31 |
| JDK-8179240 | 8u131 | Kevin Walls | P2 | Closed | Fixed | b32 |
| JDK-8192188 | emb-8u161 | Kevin Walls | P2 | Resolved | Fixed | b01 |
| JDK-8176154 | 7u171 | Kevin Walls | P2 | Closed | Fixed | b01 |
| JDK-8182434 | 7u151 | Kevin Walls | P2 | Resolved | Fixed | b31 |
| JDK-8179926 | 7u141 | Kevin Walls | P2 | Closed | Fixed | b32 |
- backported by
-
JDK-8168474 Add a new CPU family (S_family) for SPARC S7 and above processors
-
- Resolved
-
-
JDK-8182434 Add a new CPU family (S_family) for SPARC S7 and above processors
-
- Resolved
-
-
JDK-8183063 Add a new CPU family (S_family) for SPARC S7 and above processors
-
- Resolved
-
-
JDK-8183434 Add a new CPU family (S_family) for SPARC S7 and above processors
-
- Resolved
-
-
JDK-8185196 Add a new CPU family (S_family) for SPARC S7 and above processors
-
- Resolved
-
-
JDK-8190040 Add a new CPU family (S_family) for SPARC S7 and above processors
-
- Resolved
-
-
JDK-8192188 Add a new CPU family (S_family) for SPARC S7 and above processors
-
- Resolved
-
-
JDK-8195275 Add a new CPU family (S_family) for SPARC S7 and above processors
-
- Resolved
-
-
JDK-8197270 Add a new CPU family (S_family) for SPARC S7 and above processors
-
- Resolved
-
-
JDK-8168475 Add a new CPU family (S_family) for SPARC S7 and above processors
-
- Closed
-
-
JDK-8176154 Add a new CPU family (S_family) for SPARC S7 and above processors
-
- Closed
-
-
JDK-8179240 Add a new CPU family (S_family) for SPARC S7 and above processors
-
- Closed
-
-
JDK-8179926 Add a new CPU family (S_family) for SPARC S7 and above processors
-
- Closed
-
- is blocked by
-
JDK-8165482 java in ldoms, with cpu-arch=generic has problems
-
- Resolved
-
-
JDK-8157141 Fix for JDK-8031290 is unnecessarily fragile
-
- Closed
-