8164002: Add a new CPU family (S_family) for SPARC S7 and above processors

Reviewed-by: dholmes, ecaspole, kvn